--- a/src/index.html
+++ b/src/index.html
@@ -6,19 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
     <link rel="stylesheet" href="./css/styles.css" />
+  
   </head>
   <body>
-    <load ="partials/header.html" />
+   
+  
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+    <form>
+      <input type="text" name="search"  placeholder="Search images..."/>
+      <button type="submit">Search</button>
+    </form>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <div class="loader"></div>
 
+    <ul class="gallery"></ul>
     <script type="module" src="./main.js"></script>
+    
   </body>
 </html>
