--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,11 @@
       <button type="submit">Search</button>
     </form>
 
-    <div class="loader"></div>
+    <div class="button-wrapper">
+      <button type="button" class="btn-load-more hidden">Load more</button>
+    </div>
+    <div class="loader">
+    </div>
 
     <ul class="gallery"></ul>
     <script type="module" src="./main.js"></script>
