--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     </form>
 
     <div class="button-wrapper">
-      <button type="button" class="btn-load-more hidden">Load more</button>
+      <button type="button" class="btn-load-more">Load more</button>
     </div>
     <div class="loader">
     </div>
