--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,14 @@
       <button type="submit">Search</button>
     </form>
 
-    <div class="button-wrapper">
+   
+
+    <ul class="gallery"></ul>
+    <div>
       <button type="button" class="btn-load-more">Load more</button>
     </div>
     <div class="loader">
     </div>
-
-    <ul class="gallery"></ul>
     <script type="module" src="./main.js"></script>
     
   </body>
